// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access local property: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "[][\\"length\\"];",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 0,
  },
  "visualiseListResult": undefined,
}
`;

exports[`Builtins don't create additional errors when it's not their fault: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return a;
}
map(f, list(1, 2));",
  "displayResult": undefined,
  "errors": Array [
    UndefinedVariable {
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 2,
        },
        "start": Position {
          "column": 9,
          "line": 2,
        },
      },
      "name": "a",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of array: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "[].push;",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": Array [],
      "prop": "push",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of arrow function: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "(() => 1)[\\"constructor\\"];",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 24,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": [Function],
      "prop": "constructor",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of builtin: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "pair[\\"constructor\\"];",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": [Function],
      "prop": "constructor",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of function: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f() {}
f[\\"constructor\\"];",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 16,
          "line": 2,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "obj": [Function],
      "prop": "constructor",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of number: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "(1).toPrecision;",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": 1,
      "prop": "toPrecision",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of object: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "({}).valueOf;",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": Object {},
      "prop": "valueOf",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing inherited property of string: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "'hi'.includes;",
  "displayResult": undefined,
  "errors": Array [
    GetInheritedPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": "hi",
      "prop": "includes",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property of null: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "null[\\"prop\\"];",
  "displayResult": undefined,
  "errors": Array [
    GetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": null,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property of undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined[\\"prop\\"];",
  "displayResult": undefined,
  "errors": Array [
    GetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when accessing property on undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop;",
  "displayResult": undefined,
  "errors": Array [
    GetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to builtin: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "map = 5;",
  "displayResult": undefined,
  "errors": Array [
    ConstAssignment {
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "map",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to builtin: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "undefined = 5;",
  "displayResult": undefined,
  "errors": Array [
    ConstAssignment {
      "location": SourceLocation {
        "end": Position {
          "column": 13,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "undefined",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to property on undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop = 123;",
  "displayResult": undefined,
  "errors": Array [
    SetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when assigning to property on variable with value undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const u = undefined;
u.prop = 123;",
  "displayResult": undefined,
  "errors": Array [
    SetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 2,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling arrow function with too few arguments: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
f();",
  "displayResult": undefined,
  "errors": Array [
    InvalidNumberOfArguments {
      "expected": 1,
      "got": 0,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 2,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling arrow function with too many arguments: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
f(1, 2);",
  "displayResult": undefined,
  "errors": Array [
    InvalidNumberOfArguments {
      "expected": 1,
      "got": 2,
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 2,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling function with too few arguments: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return x;
}
f();",
  "displayResult": undefined,
  "errors": Array [
    InvalidNumberOfArguments {
      "expected": 1,
      "got": 0,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 4,
        },
        "start": Position {
          "column": 0,
          "line": 4,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling function with too many arguments: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f(x) {
  return x;
}
f(1, 2);",
  "displayResult": undefined,
  "errors": Array [
    InvalidNumberOfArguments {
      "expected": 1,
      "got": 2,
      "location": SourceLocation {
        "end": Position {
          "column": 7,
          "line": 4,
        },
        "start": Position {
          "column": 0,
          "line": 4,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value "string": expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "'string'();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": "string",
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value 0: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "0();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": 0,
      "location": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value array: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "[1]();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Array [
        1,
      ],
      "location": SourceLocation {
        "end": Position {
          "column": 5,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value null: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "null();",
  "displayResult": undefined,
  "errors": Array [
    NoNullError {
      "node": Node {
        "end": 4,
        "loc": SourceLocation {
          "end": Position {
            "column": 4,
            "line": 1,
          },
          "start": Position {
            "column": 0,
            "line": 1,
          },
        },
        "raw": "null",
        "start": 0,
        "type": "Literal",
        "value": null,
      },
      "severity": "Error",
      "type": "Syntax",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value object: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "({a: 1})();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": Object {
        "a": 1,
      },
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value true: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "true();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": true,
      "location": SourceLocation {
        "end": Position {
          "column": 6,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when calling non function value undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined();",
  "displayResult": undefined,
  "errors": Array [
    CallingNonFunctionValue {
      "callee": undefined,
      "location": SourceLocation {
        "end": Position {
          "column": 11,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when deeply accessing property on undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "undefined.prop.prop;",
  "displayResult": undefined,
  "errors": Array [
    GetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 14,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when deeply assigning to property on variable with value undefined: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const u = undefined;
u.prop.prop = 123;",
  "displayResult": undefined,
  "errors": Array [
    GetPropertyError {
      "location": SourceLocation {
        "end": Position {
          "column": 6,
          "line": 2,
        },
        "start": Position {
          "column": 0,
          "line": 2,
        },
      },
      "obj": undefined,
      "prop": "prop",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring constant as variable: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
let f = x => x;",
  "displayResult": undefined,
  "errors": Array [
    FatalSyntaxError {
      "location": Object {
        "end": Object {
          "column": 5,
          "line": 2,
        },
        "start": Object {
          "column": 4,
          "line": 2,
        },
      },
      "message": "SyntaxError: Identifier 'f' has already been declared (2:4)",
      "severity": "Error",
      "type": "Syntax",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring constant: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "const f = x => x;
const f = x => x;",
  "displayResult": undefined,
  "errors": Array [
    FatalSyntaxError {
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 2,
        },
        "start": Object {
          "column": 6,
          "line": 2,
        },
      },
      "message": "SyntaxError: Identifier 'f' has already been declared (2:6)",
      "severity": "Error",
      "type": "Syntax",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring variable as constant: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "let f = x => x;
const f = x => x;",
  "displayResult": undefined,
  "errors": Array [
    FatalSyntaxError {
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 2,
        },
        "start": Object {
          "column": 6,
          "line": 2,
        },
      },
      "message": "SyntaxError: Identifier 'f' has already been declared (2:6)",
      "severity": "Error",
      "type": "Syntax",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Error when redeclaring variable: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "let f = x => x;
let f = x => x;",
  "displayResult": undefined,
  "errors": Array [
    FatalSyntaxError {
      "location": Object {
        "end": Object {
          "column": 5,
          "line": 2,
        },
        "start": Object {
          "column": 4,
          "line": 2,
        },
      },
      "message": "SyntaxError: Identifier 'f' has already been declared (2:4)",
      "severity": "Error",
      "type": "Syntax",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Nice errors when errors occur inside builtins: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "parse_int(\\"10\\");",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive.],
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Nice errors when errors occur inside builtins: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "parse(\\"'\\");",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [ParseError: SyntaxError: Unterminated string constant (1:0)],
      "location": SourceLocation {
        "end": Position {
          "column": 10,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`Runtime error when redeclaring constant 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring constant 2`] = `""`;

exports[`Runtime error when redeclaring constant 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring constant 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring constant as variable 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring constant as variable 2`] = `""`;

exports[`Runtime error when redeclaring constant as variable 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring constant as variable 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring variable 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring variable 2`] = `""`;

exports[`Runtime error when redeclaring variable 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring variable 4`] = `"Line 2: Redeclaring name f"`;

exports[`Runtime error when redeclaring variable as constant 1`] = `
Object {
  "status": "finished",
  "value": undefined,
}
`;

exports[`Runtime error when redeclaring variable as constant 2`] = `""`;

exports[`Runtime error when redeclaring variable as constant 3`] = `
Object {
  "status": "error",
}
`;

exports[`Runtime error when redeclaring variable as constant 4`] = `"Line 2: Redeclaring name f"`;

exports[`Undefined variable error is thrown: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "im_undefined;",
  "displayResult": undefined,
  "errors": Array [
    UndefinedVariable {
      "location": SourceLocation {
        "end": Position {
          "column": 12,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "name": "im_undefined",
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;
